Refactored minor details.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Please confirm your age to continue</h5>
+                    <h5 class="modal-title" id="staticBackdropLabel">Please confirm your are at least 18 years of age</h5>
                 </div>
                 <div class="modal-body">
                     <div class="container">
@@ -118,8 +118,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button id="buttonClose" type="button" class="btn btn-success btn-sm" data-dismiss="modal">Close</button>
-                    <button id="buttonAgeCheck" type="button" class="btn btn-dark btn-sm">Understood</button>
+                    <button id="buttonContinue" type="button" class="btn btn-success btn-sm">Leave</button>
+                    <button id="buttonAgeCheck" type="button" class="btn btn-dark btn-sm">Verify age</button>
                 </div>
             </div>
         </div>
